--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,4 +1,4 @@
-/* Reset styles */
+Reset styles
 h1,
 h2,
 h3,
@@ -31,5 +31,6 @@ button {
 img {
   display: block;
   max-width: 100%;
-  height: auto;
+  height: 80%;
+  object-fit: cover;
 }
